fixed "jumpy group" bug
CSS was resizing groups on dragover to show the border, and causing
groups to jump away from the card being dragged in as the group was
moved down (it no longer fit in-line due to its new dimensions).

I offset the hidden borders with padding, which is then removed on
dragover.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -295,6 +295,7 @@ a {
   border-width: 4px 0px 0px 0px;
   border-style: solid;
   min-height: 168px;
+  padding:0px 4px 4px 4px;
 }
 
 .group.odd {
@@ -326,6 +327,7 @@ a {
   background-color:#999999;
   border-width:4px;
   border-style:dashed;
+  padding:0px;
 }
 
 .group.over .group-name {
